<resources>
    <string name="app_name">First Test App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Page</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="previous">Previous</string>

    <string name="choose_text">Choose a Scenario</string>
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="Approach_1">Default Scenario</string>
    <string name="Approach_2">Background Usage</string>
    <string name="Approach_4">File Download</string>
    <string name="Approach_3">Video Streaming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_description">The Default Scenario is the best overall scenario, enough for most of your daily internet activities like media consumption,
browsing and texting. This will reduce your interaction with the app as much as possible for the best user experience.</string>
    <string name="background_description">The Background Usage scenario is best for when your phone is on standby or not in use. This will help reduce your battery
consumption, while still keeping your phone connected in the background to receive calls, texts and other notifications.</string>
    <string name="video_description">The Video Streaming scenario is best chosen for watching and streaming videos with the best quality. This scenario is the
most battery hungry though, so only use it when needed.</string>
    <string name="download_description">The File Download scenario is used for downloading large files over the internet like a software update for your phone
or a game from the play store.</string>
    <string name="launch_scenario">Launch Scenario</string>
</resources>