<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Moccasin"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/choose_text"
        android:textColor="#455A64"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/Approach_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53999996" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Approach_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/navy_button_background"
        android:backgroundTint="@color/teal_700"
        android:shadowColor="@color/black"
        android:text="@string/Approach_1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Approach_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first"
        app:layout_constraintVertical_bias="0.48000002" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Approach_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/navy_button_background"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Approach_2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Approach_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Approach_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Approach_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/navy_button_background"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Approach_3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Approach_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Approach_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Approach_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/teal_700"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Approach_4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Approach_3" />

</androidx.constraintlayout.widget.ConstraintLayout>